<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/publish_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/text_margin"
                android:padding="1dp"
                android:text="@string/blog_date"
                android:textAppearance="?attr/textAppearanceListItem" />

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/text_margin"
                android:padding="1dp"
                android:text="@string/blog_title"
                android:textAppearance="?attr/textAppearanceListItem" />

            <TextView
                android:id="@+id/teaser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="1dp"
                android:text="@string/blog_teaser"
                android:maxLength="100"
                android:ellipsize="end"/>
        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>
